# DRF-VueJS

./: README.md
Backend/: db.sqlite3  groups.json  manage.py  populate.json  pyproject.toml  requirements.txt
Backend/certificado/: asgi.py  settings.py  urls.py  wsgi.py
Backend/core/: admin.py  models.py  views.py
Backend/core/migrations/: 0001_initial.py  0002_auto_20211013_0102.py  0003_auto_20211013_0109.py  0004_auto_20211013_0234.py
Frontend/app/: package-lock.json  package.json
Frontend/app/public/: index.html
Frontend/app/src/: App.vue
Frontend/app/src/components/: CertificadoEdit.vue  CertificadoForm.vue  CertificadoView.vue
Frontend/app/src/views/: Home.vue
